tried mobile experience list display fix + tried preventing auto download on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,9 @@ print {
     .social .social-text {
         display: none;
     }
+    .experience-item:before {
+        left:-1rem;
+    }
 }
 
 @media (min-width: 721px),
